fixed spacing for list, deleted userId in list to allow more space, resized Giphy Images in list, styled login/out button and made font-size larger for submit button

--- a/KajBlogFront/my-angular-app/src/app/components/post-list/post-list.component.css
+++ b/KajBlogFront/my-angular-app/src/app/components/post-list/post-list.component.css
@@ -13,7 +13,7 @@ div {
     background: white;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    margin-top: 5%;
+    margin-top: 8rem; 
 }
 
 
@@ -47,4 +47,9 @@ td {
     vertical-align: top;
     font-size: 18px;
     
+}
+
+img {
+    max-width: 18rem;
+    max-height: 18rem;
 }
